fix: improve overflow mode for Dynamic Editor
makes overflow visible, overflow-wrap normal, and word-break normal

--- a/src/stylesheets/dynamicEditor.scss
+++ b/src/stylesheets/dynamicEditor.scss
@@ -25,3 +25,15 @@ button.block-menu-trigger {
   background-color: var(--sn-stylekit-background-color);
   color: var(--sn-stylekit-foreground-color);
 }
+
+#content.overflow {
+  .ProseMirror {
+    overflow-wrap: normal !important;
+  }
+  .ProseMirror li p:first-child {
+    word-break: normal !important;
+  }
+  .DynamicEditor pre {
+    overflow: visible;
+  }
+}
